--- a/Leaflet-Step-2/index.html
+++ b/Leaflet-Step-2/index.html
@@ -4,24 +4,41 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Leaflet Step-1</title>
+  <title>Earthquake Dashboard</title>
+  
 
-  <!-- Leaflet CSS -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.css" />
+  <!-- Leaflet CSS + JS -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.2/dist/leaflet.css" />
+  <script src="https://unpkg.com/leaflet@1.3.2/dist/leaflet.js"></script>
 
+   <!--D3 -->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.5.0/d3.min.js"></script>
+  
+   <!-- Leaflet Timeline -->
+  <script src="https://cdn.jsdelivr.net/npm/leaflet.timeline@1.2.1/dist/leaflet.timeline.min.js"></script>
   <!-- Our CSS -->
   <link rel="stylesheet" type="text/css" href="static/css/style.css">
 </head>
 <body>
 
-  <!-- The div that holds our map -->
+  <!-- Special thanks to Leaflet.timeline reference @ https://github.com/skeate/Leaflet.timeline -->
+  <div class="container-fluid">
+    <div class="jumbotron text-center">
+      <h1>Earthquake Dashboard</h1>
+      <h3>By Jonathan Rinko</h3>
+      <p>The visualization below shows earthquake events for the past 7 days, updated daily by the
+        <a href="https://earthquake.usgs.gov/" target="_blank">United States Geological Survey (USGS)</a><br>
+        Leaflet.js is used to plot the data.  Circle size and color indicate the magnitude of the earthquake.<br>
+        Special thanks to Leaflet.timeline reference @ https://github.com/skeate/Leaflet.timeline 
+      </p>
+    </div>
+  </div>
+
+  <!-- Div for Map -->
   <div id="map"></div>
 
-  <!-- Leaflet JavaScript -->
-  <script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script>
-  <!-- D3 JavaScript -->
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.3/d3.min.js"></script>
   <!-- Our JavaScript -->
+  <script src='./config.js'></script> <!--Make sure to add this file to .gitignore-->
   <script type="text/javascript" src="static/js/logic.js"></script>
 </body>
 </html>
