--- a/Leaflet-Step-2/index.html
+++ b/Leaflet-Step-2/index.html
@@ -25,7 +25,7 @@
   <div class="container-fluid">
     <div class="jumbotron text-center">
       <h1>Earthquake Dashboard</h1>
-      <h3>By Jonathan Rinko</h3>
+      <!-- <h3>By Jonathan Rinko</h3> -->
       <p>The visualization below shows earthquake events for the past 7 days, updated daily by the
         <a href="https://earthquake.usgs.gov/" target="_blank">United States Geological Survey (USGS)</a><br>
         Leaflet.js is used to plot the data.  Circle size and color indicate the magnitude of the earthquake.<br>
